added new function to change player image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ button {
     text-align: center;
 }
 
-.playerimage {
+#playerimage {
     width: 300px;
     height: 300px;
     object-fit: cover;
