added some more styling to game results area.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,8 @@ button {
 .result {
     text-align: center;
     height: 100px;
+    font-weight: bolder;
+    font-size: xxx-large;
 }
 
 .winner {
