Styling issues with Computer Image corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ button {
     object-position: center;
 }
 
-.computerimage {
+#computerimage {
     width: 300px;
     height: 300px;
     object-fit: cover;
