--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,42 @@ button {
 /* Media queries */
 
 /* For medium screens 480px and smaller */
+@media screen and (max-width: 600px) {
+    
+    .title {
+        height: 40px;
+    }
+    
+    h1 {
+        font-size: x-large;
+    }
+    
+    button {
+        height: 30px;
+        width: 80px;
+        font-size-adjust: .8;
+    }
+    
+    .pictures {
+        height: 200px;
+    }
+    
+    #playerimage {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    object-position: center;
+    }
+    
+    #computerimage {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    object-position: center;
+    }
+}
+
+/* For medium screens 480px and smaller */
 @media screen and (max-width: 480px) {
     
     .title {
