Changed background colour

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #a6e3d1;
+    background-color: RGB(29, 110, 176);
     color: #262928;
     font-family: "Rubik", sans-serif;
 }
